# histomining

./: .gitignore  Makefile  README.md  histomining.code-workspace  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
histomining/: cli.py
histomining/data/: compute_embeddings.py  create_csv_data_split.py  select_and_copy_normal_tile_cptac.py  torch_datasets.py
histomining/models/: encoder.py  foundation_models.py  linear_probing.py  model_clam.py
histomining/training/: train_linear_probing_from_embeddings.py
histomining/utils/: __init__.py  utils.py
notebooks/: explo_embeddings..ipynb  explo_embeddings.ipynb  explo_linear_probing_from_embeddings.ipynb  explo_metadata_cptac.ipynb
