[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "histomining"
version = "0.0.1"
description = "Tools to mine histopathology tiles"
authors = [
  { name = "Valentin Oreiller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"


[tool.ruff]
line-length = 99
src = ["histomining"]
include = ["pyproject.toml", "histomining/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["histomining"]
force-sort-within-sections = true

